--- a/src/components/Tictactoe/MovesHistory/MovesHistory.css
+++ b/src/components/Tictactoe/MovesHistory/MovesHistory.css
@@ -1,7 +1,11 @@
 /* Container for the history */
+.moves-history {
+    flex: 1; /* Займає весь залишковий простір */
+    overflow-y: auto; /* Вертикальний скрол тільки для історії ходів */
+}
+
 #moves-history {
     padding: 10px;
-    margin: 10px 0;
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #fafafa;
